# Autonomous-AI-Agent

./: README.md  api.py  app.py  config.py  doc_generator.py  executor.py  main.py  models.py  planner.py  prompts.py  pyproject.toml  reflection.py  requirements.txt
output/: Business_Proposal_20260701_094419.docx  project_plan_20260701_101015.docx
